fixed add teacher card on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -307,6 +307,7 @@ body {
     align-items: center;
     margin: 1vw 0;
     padding: 1vh 3vw 0vh;
+    max-width: 80%;
   }
 
       .prof-container > i{
@@ -460,7 +461,7 @@ body {
 
 #coming-soon{
   position: absolute;
-  top: 300px;
+  top: 45%;
   color: rgba(0, 0, 0, 0.349);
   font-family: 'Alegreya Sans SC', sans-serif;
 }
